2009-07-14  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (singleItfNegation::processNext): fixed
	bug #2819901: "sub-optimal expansion of negated interface". Policy
	rules with single interface object in "interface" rule element
	with negation should generate iptables commands using "-i ! itf"
	or "-o ! itf" rather than multiply the rule using all other
	interfaces of the firewall. Note that for iptables v1.4.3 and
	later, extrapositioned syntax is used, such as "! -i itf".

	* PolicyCompiler_PrintRule.cpp, NATCompiler_PrintRule.cpp: fixed
	bug #2821050: "loading new fw rules on iptables 1.4.3.2+ gives
	warnings". starting with v1.4.3.1 iptables started giving warnings
	when negation ("!")  is used after --option. This fix adds version
	"1.4.3" to the list of recognized iptables versions in fwbuilder
	and makes compiler generate extrapositioned version of the option
	such as "!  --option arg".

2009-07-13  vadim  <vadim@vk.crocodile.org>

	* iptAdvancedDialog.cpp (iptAdvancedDialog::iptAdvancedDialog):
	fixed bug #2820840: "IPT: prolog script+iptables-restore silent
	incompatibility". With this fix the GUI does not allow for the
	prolog script to be placed after policy reset if iptables-restore
	is used to activate iptables rules. Also policy compiler for
	iptables checks for this condition and aborts with an error
	message if prolog place is set to "after reset" but
	iptables-restore is used to activate policy. Configuration may end
	up with this combination of options if user set prolog place to
	"after reset" first and switched activation method to
	iptables-restore later.

	* ACL.cpp (ciscoACL::addRemark): fixed bug #1778536 "IOSACL -
	remark command". Remarks now include rule comments; if comment
	consists of several lines, each line is added using separate
	remark statement. This works for both IOS ACL and PIX platforms.

2009-07-12  vadim  <vadim@vk.crocodile.org>

	* printerStream.cpp (printerStream::printQTable): fix bug