@@ -4243,6 +4243,7 @@ void PolicyCompiler_ipt::compile()
              "drop rules with action Continue") );
     add( new convertInterfaceIdToStr("prepare interface assignments") );
     add( new optimize3("optimization 3") );
+    add( new optimizeForMinusIOPlus("optimize for '-i +' / '-o +'") );
 
     add( new countChainUsage("Count chain usage"));
 
